--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,13 +18,14 @@
 
       <% if user_signed_in? %> 
         <%# ログイン時に表示 %>
-        <% <li><%= link_to current_user.nickname, "#", class: "user-nickname" </li> %>
-        <% <li><%= link_to 'ログアウト', "#", data: {turbo_method: :delete}, class: "logout" </li> %>
+        <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to 'ログアウト', "#", data: {turbo_method: :delete}, class: "logout" %></li>
       <% else %> 
         <%# 非ログイン時に表示 %>
         <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
         <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
       <% end %>
+
     </ul>
   </div>
 </header>
