--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,18 +136,19 @@
             <%= image_tag item.image, class: "item-img" %>
 
             <%# 商品が売れていればsold outを表示しましょう %>
-            <div class='sold-out'>
+            <%# 商品購入機能実装後に実装 %>
+            <%# <div class='sold-out'>
               <span>Sold Out!!</span>
-            </div>
+            </div> %>
             <%# //商品が売れていればsold outを表示しましょう %>
 
           </div>
           <div class='item-info'>
             <h3 class='item-name'>
-              <%= "商品名" %>
+              <%= item.name %>
             </h3>
             <div class='item-price'>
-              <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
+              <span><%= item.price %>円<br><%= '配送料負担' %></span>
               <div class='star-btn'>
                 <%= image_tag "star.png", class:"star-icon" %>
                 <span class='star-count'>0</span>
