--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -153,7 +153,7 @@ app/assets/stylesheets/items/new.css %>
       <li><a href="#">フリマ利用規約</a></li>
       <li><a href="#">特定商取引に関する表記</a></li>
     </ul>
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), @item_path(item.id) %>
+    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), item_path(@item.id) %>
     <p class="inc">
       ©︎Furima,Inc.
     </p>
