--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,14 +9,12 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
 
-      <%# 商品購入機能実装後に実装 %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# 
+      <%# itemが売却済みでorderを保有している場合にsold outを表示 %>
+      <% if@item.order %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
 
     </div>
     <div class="item-price-box">
