--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,7 +9,7 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
 
-      <%# itemが売却済みでorderを保有している場合にsold outを表示 %>
+      <%# 商品が売却済みでorderを保有している場合にsold outを表示 %>
       <% if@item.order %>
       <div class="sold-out">
         <span>Sold Out!!</span>
@@ -25,20 +25,19 @@
         <%= @item.shipping_charge_payer.name %>
       </span>
     </div>
-
-    <%# ユーザーがログイン中かつ商品の出品者である時、編集・削除リンクを表示 %>
-    <% if user_signed_in? && current_user.id == @item.user_id %>
-      <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", item_path(@item.id), data: {turbo_method: :delete}, class:"item-destroy" %>
-    <%# ユーザーがログイン中かつ商品の出品者でない時、購入リンクを表示 %>
-    <% elsif user_signed_in? && current_user.id != @item.user_id %>
-
-      <%# 商品購入機能実装後に実装 %>
-      <%# 商品が売れていない場合はこちらを表示しましょう %>
-      <%= link_to "購入画面に進む", item_orders_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
-      <%# //商品が売れていない場合はこちらを表示しましょう %>
-
+    
+    <%# 商品の編集・削除・購入ボタンの表示切替 %>
+    <%# "商品が売却済みでorderを保有している"以外の場合にボタンを表示 %>
+    <% unless @item.order %>
+      <%# ユーザーがログイン中かつ商品の出品者である時、編集・削除リンクを表示 %>
+      <% if user_signed_in? && current_user.id == @item.user_id %>
+        <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item.id), data: {turbo_method: :delete}, class:"item-destroy" %>
+      <%# ユーザーがログイン中かつ商品の出品者でない時、購入リンクを表示 %>
+      <% elsif user_signed_in? && current_user.id != @item.user_id %>
+        <%= link_to "購入画面に進む", item_orders_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
+      <% end %>
     <% end %>
 
     <div class="item-explain-box">
