コメントの修正

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -27,7 +27,7 @@
     </div>
     
     <%# 商品の編集・削除・購入ボタンの表示切替 %>
-    <%# "商品が売却済みでorderを保有している"以外の場合にボタンを表示 %>
+    <%# 商品が売却済みでorderを保有していない場合にボタンを表示 %>
     <% unless @item.order %>
       <%# ユーザーがログイン中かつ商品の出品者である時、編集・削除リンクを表示 %>
       <% if user_signed_in? && current_user.id == @item.user_id %>
